
This release has some minor improvements to the new Table.diff! functionality. For example,
if you're using Webrat and you want to compare a feature table with a HTML table containing
links in one of the columns, you can do:

  actual = Cucumber::Ast::Table.new(table_at('table').to_a)
  actual.map_column!('Name') { |text| text.strip.match(/>(.*)</)[1] }
  table.diff!(actual)

=== New features
* click_link_within(parent, link) webrat step (Joakim Kolsjö)
* Allow Step Definitions to accept mix of required & optional args (Niels Ganser)
* table_a.diff!(table_b) now uses column conversions from both tables (Table#map_column!) (Aslak Hellesøy)

=== Bugfixes
* script/cucumber correctly loads the gem's binary if the plugin isn't installed. 
* Cucumber hangs waiting for Ctrl+C if an Error is raised (#374 Aslak Hellesøy) 
* Upgrade Sinatra example to work with rack-test 0.3.0 and aslakhellesoy-webrat 0.4.4.1 (Aslak Hellesøy)
* require 'cucumber/webrat/table_locator' added to Spork environment for Rails (Anders Furseth)

== 0.3.91 2009-07-27

=== New Features
* CTRL-C will exit immediately instead of carrying on until all features are run. (Aslak Hellesøy)
* Run can be stopped programmatically by setting $cucumber_interrupted = true, for example in an After block. (Aslak Hellesøy)
* Table support for cuke4duke

== 0.3.90 2009-07-22

The Hot summer release

This is a hot summer in Norway, and Cucumbers are growing in abundance. To celebrate this we give you
a new release with lots of new features and bugfixes. This is also one of the last releases in the 0.3 series
(hence the 0.3.90 number), so 0.4 (or maybe 1.0!) will be coming up soon. The highlights of this release are:

=== Egality

English is not the world's most spoken language, so why should Cucumber force non-English speakers to use the
--language flag? As of this release you're no longer forced to do that. Instead, you can add a comment header 
to your .feature files:

  # language: fr